--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 			if (partes.length !== 4) {
 				resultadoDiv.className = "erro";
-				resultadoDiv.innerText = "❌ Formato inválido do código.";
+				resultadoDiv.innerText = "❌ Formato inválido do código. Veja: " + partes;
 				return;
 			}
 
