--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 		
 
 		<label for="codigo">Código do Certificado:</label>
-		<input type="text" id="codigo" placeholder="Cole aqui o código criptografado">
+		<input type="text" id="codigo" placeholder="Código de validação do certificado.">
 
 		<div class="btn-group">
 			<button onclick="limparCodigo()">Limpar Código</button>
